# prisma-per-liita

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  gradio_app.py
data/: test_dataset.json
evaluation/: __init__.py  f1_evaluator.py
examples/: basic_usage.py
prisma/: __init__.py  assembler.py  filter_language.py  filter_system.py  intent_analyzer.py  llm.py  orchestrator.py  pattern_tools.py  property_registry.py  test_all_patterns.py  test_filter_integration.py  test_filter_language.py  test_filter_system.py  translator.py
reports/: f1_report_prisma_anthropic_claude-sonnet-4-6.json
scripts/: replay_evaluation.py  run_f1_evaluation.py
shared/: __init__.py  llm.py
tests/: __init__.py
tests/test_prisma/: __init__.py
tests/test_prisma_v2/: __init__.py
