[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma-per-liita"
version = "0.1.0"
description = "Pattern-based Rules for Intent-driven SPARQL with Multiple-resource Assembly for LiITA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PRISMA per LiITA Project"}
]
keywords = [
    "sparql",
    "nlp",
    "natural-language-processing",
    "knowledge-graph",
    "italian",
    "linguistics",
    "liita"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
mistral = ["mistralai>=0.1.0"]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.3.0"]
ollama = ["ollama>=0.1.0"]
ui = ["gradio>=4.0.0"]
all = [
    "mistralai>=0.1.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
    "gradio>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/prisma-per-liita"
Documentation = "https://github.com/yourusername/prisma-per-liita#readme"
Repository = "https://github.com/yourusername/prisma-per-liita"
Issues = "https://github.com/yourusername/prisma-per-liita/issues"

[project.scripts]
prisma-ui = "app.gradio_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prisma*", "app*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
